# awesome-people-finder

./: AwesomePeopleFinder.cabal  README.md
src/: Github.hs  Main.hs  Utils.hs
