name:                AwesomePeopleFinder
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bcherny/awesome-people-finder#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable AwesomePeopleFinder
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       HTTP,
                       http-conduit,
                       http-client,
                       http-client-tls,
                       scotty,
                       aeson,
                       bytestring
